Fixing text overflow for long titles

--- a/src/aps/learningsystems/browser/static/apslearningsystems.css
+++ b/src/aps/learningsystems/browser/static/apslearningsystems.css
@@ -8,7 +8,7 @@
 	margin: 0px 8px 8px 0px;
 	padding: 10px;
 	border-radius: 4px;
-	height: 240px;
+	height: 290px;
 	position: relative;
 }
 .portaltype-system_warehouse #content-core article .tileImage {
